# cpp-rust-ffi-demo

./: .gitignore  CMakeLists.txt  CMakeLists.txt.dynamic  Cargo.toml.dynamic  DYNAMIC_LINKING.md  LINKING_QUICK_REFERENCE.md  Makefile  OPAQUE_TYPES_PATTERN.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SOLUTION.md  VERIFICATION.md  build.sh  clean.sh
.cache/clangd/index/: lib.rs.h.BAFD3E8B7EA5E555.idx  main.cpp.CCAE8BF7E1AA491A.idx  person.cpp.A45774E9D83C3628.idx  person.h.9CD0A4F04AE97967.idx
.cargo/: config.toml
cpp-app/: main.cpp  person.cpp  person.h
rust-lib/: Cargo.toml  build.rs
rust-lib/src/: lib.rs
